kubernetes/booking-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  ports:
  - port: 9003
  selector:
    app: booking
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  selector:
    matchLabels:
      app: booking
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - image: jswen19109814/booking:booking
        name: booking
        imagePullPolicy: Always
        ports:
        - containerPort: 9003
          name: booking
