kubernetes/eks-booking-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: booking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: booking
  template:
    metadata:
      labels:
        app.kubernetes.io/name: booking
    spec:
      containers:
      - image: jswen19109814/booking:booking
        imagePullPolicy: Always
        name: booking
        ports:
        - containerPort: 80
