kubernetes/eks-flight-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: flight
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: flight
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flight
    spec:
      containers:
      - image: jswen19109814/flight:flight
        imagePullPolicy: Always
        name: flight
        ports:
        - containerPort: 80
