kubernetes/flight-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight
spec:
  ports:
  - port: 9001
  selector:
    app: flight
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
spec:
  selector:
    matchLabels:
      app: flight
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
      - image: jswen19109814/flight:flight
        name: flight
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
          name: flight
