kubernetes/user-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  ports:
  - port: 9002
  selector:
    app: user
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - image: jswen19109814/user:user
        name: user
        imagePullPolicy: Always
        ports:
        - containerPort: 9002
          name: user
